2010-11-11  Hans Wennborg  <hans@chromium.org>

Reviewed by Jeremy Orlow.

        IndexedDB: signal IDBFactoryBackendInterface destruction to embedder
        https://bugs.webkit.org/show_bug.cgi?id=49313

        Implement ChromiumBridge::idbShutdown(), passing through to the
        WebKitClient.

        * public/WebKitClient.h:
        (WebKit::WebKitClient::idbShutdown):
        * src/ChromiumBridge.cpp:
        (WebCore::ChromiumBridge::idbShutdown):
2010-11-11  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: signal IDBFactoryBackendInterface destruction to embedder
        https://bugs.webkit.org/show_bug.cgi?id=49313

        Define IDBFactoryBackendInterface destructor out-of-line to allow
        for embedder-specific implementation. For Chromium, have the
        destructor call ChromiumBridge::idbShutdown().

        * platform/chromium/ChromiumBridge.h:
        * storage/IDBFactoryBackendInterface.cpp:
        (WebCore::IDBFactoryBackendInterface::~IDBFactoryBackendInterface):
        * storage/IDBFactoryBackendInterface.h:
        * storage/chromium/IDBFactoryBackendInterface.cpp:
        (WebCore::IDBFactoryBackendInterface::~IDBFactoryBackendInterface):


Canonical link: https://commits.webkit.org/62305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71829 268f45cc-cd09-0410-ab3c-d52691b4dbfc