WebCore/storage/IDBFactoryBackendInterface.cpp
@@ -43,7 +43,10 @@ PassRefPtr<IDBFactoryBackendInterface> IDBFactoryBackendInterface::create()
     return IDBFactoryBackendImpl::create();
 }
 
+IDBFactoryBackendInterface::~IDBFactoryBackendInterface()
+{
+}
+
 } // namespace WebCore
 
 #endif // ENABLE(INDEXED_DATABASE)
-
