WebCore/storage/chromium/IDBFactoryBackendInterface.cpp
@@ -39,7 +39,11 @@ PassRefPtr<IDBFactoryBackendInterface> IDBFactoryBackendInterface::create()
     return ChromiumBridge::idbFactory();
 }
 
+IDBFactoryBackendInterface::~IDBFactoryBackendInterface()
+{
+    ChromiumBridge::idbShutdown();
+}
+
 } // namespace WebCore
 
 #endif // ENABLE(INDEXED_DATABASE)
-
